# asssignment1

./: README.md
source/FourBitAdder/: FourBitAdder.h
source/FourBitAdder/intern/: AbstractGate.cpp  FourBitAdder.cpp  FullAdder.cpp  FullAdder.h  HalfAdder.cpp  HalfAdder.h  LogicGates.cpp
tests/gtests/: CMakeLists.txt  GTestFourBitAdder.cpp  GTestFourBitAdder.cpp.orig  GTestFullAdder.cpp  GTestFullAdder.cpp.orig  GTestHalfAdder.cpp  GTestHalfAdder.cpp.orig  GTestLogicGates.cpp
